<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/textView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:text="@string/register"
           android:textAppearance="?android:attr/textAppearanceLarge" />


       <EditText
           android:id="@+id/editTextEmail"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="15dp"
           android:hint="@string/enteremail"
           android:inputType="textEmailAddress" />

       <EditText
           android:id="@+id/editTextPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="15dp"
           android:hint="@string/enterpassword"
           android:inputType="textPassword" />


       <Button
           android:id="@+id/buttonRegister"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="15dp"
           android:text="@string/registerbtn" />

       <TextView
           android:id="@+id/textViewSignin"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/txtbtn1"
           android:textAlignment="center"
           android:textColor="@color/colorPrimary" />


   </LinearLayout>



   ></RelativeLayout>

