<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Question2Activity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txt_twoperseven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_twoperseven"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_que2"
                android:layout_width="match_parent"
                android:layout_height="219dp"
                app:srcCompat="@drawable/two" />

            <TextView
                android:id="@+id/txt_title_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que_title2"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_que2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/que2"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/btn_que2_no1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2btn1" />

                    <Button
                        android:id="@+id/btn_que2_no2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2btn2" />

                    <Button
                        android:id="@+id/btn_que2_no3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2btn3" />

                    <Button
                        android:id="@+id/btn_que2_no4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2btn4" />

                    <Button
                        android:id="@+id/btn_que2_no5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2btn5" />

                    <Button
                        android:id="@+id/btn_que2_no6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2btn6" />

                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>