<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dad7f3"
    tools:context=".ResultActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_light"
                android:text="@string/txt_result"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_scale1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_scale1"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_scale2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_scale2"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_scale3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_scale3"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_advice"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveresult" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
